--- a/src/index.html
+++ b/src/index.html
@@ -50,10 +50,42 @@
                 <option>Option 1</option>
                 <option>Option 2</option>
                 </select>
+
+                <label for="chest">Chest:</label>
+                <select class="form-control form-select" id="chest">
+                <option>Option 1</option>
+                <option>Option 2</option>
+                </select>
+
+                <label for="gloves">Gloves:</label>
+                <select class="form-control form-select" id="gloves">
+                <option>Option 1</option>
+                <option>Option 2</option>
+                </select>
+
+                <label for="pants">Pants:</label>
+                <select class="form-control form-select" id="pants">
+                <option>Option 1</option>
+                <option>Option 2</option>
+                </select>
+
+                <label for="shoes">Shoes:</label>
+                <select class="form-control form-select" id="shoes">
+                <option>Option 1</option>
+                <option>Option 2</option>
+                </select>
                 
             </div>
             
             <div class="form-group col-6">
+
+              <label for="shield">Shield:</label>
+              <select class="form-control form-select" id="shield" disabled>
+              <option>N/A</option>
+              <option>Option 1</option>
+              <option>Option 2</option>
+              </select>
+
               <label for="earring">Earring:</label>
               <select class="form-control form-select" id="earring">
               <option>Option 1</option>
@@ -66,6 +98,27 @@
               <option>Option 1</option>
               <option>Option 2</option>
               </select>
+
+              <label for="wrist">Wrist:</label>
+              <select class="form-control form-select" id="wrist">
+              <option>Option 1</option>
+              <option>Option 2</option>
+              </select>
+
+              <label for="ring1">Ring 1:</label>
+              <select class="form-control form-select" id="ring1">
+              <option>Option 1</option>
+              <option>Option 2</option>
+              </select>
+
+              <label for="ring2">Ring 2:</label>
+              <select class="form-control form-select" id="ring2">
+              <option>Option 1</option>
+              <option>Option 2</option>
+              </select>
+
+
+
               </div>
           </div>
         </div>
