--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script type = "module" src="js/main.js"></script>
     <title>Make BIS</title>
   </head>
   <body>
@@ -11,16 +16,16 @@
 
       <form>
         <div class="row">
-        <div class="form-group column" style="width:250px">
+        <div class="form-group column" style="width:300px">
           <label for="input1">Mode:</label>
           <select class="form-control form-select" id="input1">
-          <option>Current Endgame Gear</option>
+          <option>Current Endgame Gear (IL660)</option>
           <option>Pentameld</option>
           <option>Custom</option>
           </select>
         </div>
           
-        <div class="form-group column" style="width:250px">
+        <div class="form-group column" style="width: 300px">
           <label for="input2">Job:</label>
           <select class="form-control form-select" id="input2">
           <option>Samurai</option>
@@ -31,7 +36,8 @@
       </form>
 
       <br>
-      <button class="btn btn-primary">Solve</button>
+      <button id="solvebutton" class="btn btn-primary">Solve</button>
+
 
         <br>
         <br>
@@ -120,6 +126,12 @@
 
 
               </div>
+
+              <label for="food">Food:</label>
+              <select class="form-control form-select" id="food">
+              <option>Option 1</option>
+              <option>Option 2</option>
+              </select>
           </div>
         </div>
 
